Fixed position, spacing and z-index of Footer, Feed.

--- a/app/sass/components/_layout.scss
+++ b/app/sass/components/_layout.scss
@@ -146,6 +146,7 @@ main {
 
     footer {
         position: absolute;
+        z-index: 5;
         right: 10px;
         bottom: 10px;
         color: $medium-grey-light;
@@ -154,6 +155,7 @@ main {
 
     .feed {
         position: fixed;
+        z-index: 10;
         top: 80px;
         bottom: 0;
         width: 378px;
